--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:excludeFromRecents="true"
-            android:exported="true"
-            android:taskAffinity="">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,30 +29,13 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".Notification.MyBroadcastReceiver"
-            android:enabled="true"></receiver>
-
-        <receiver
-            android:name=".Notification.BootReceiverOn"
-            android:enabled="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
-            android:exported="true">
+        <service
+            android:name=".notification.FirebaseInstance"
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.intent.action.SCREEN_ON" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <category android:name="android.intent.category.HOME" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </receiver>
-
-
-        <!-- Para detectar cuando el dispositivo se apaga-->
-        <receiver android:name=".Notification.BootReceiverOff"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.ACTION_SHUTDOWN" />
-                <action android:name="android.intent.action.QUICKBOOT_POWEROFF" />
-            </intent-filter>
-        </receiver>
+        </service>
 
     </application>
 
