--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.balance_metrobus"
+        applicationId 'com.jairsan.balance_metrobus'
         minSdk 21
         targetSdk 32
         versionCode 1
